# jobflow

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dockerfile
doc/: AD.puml  sql.sql  接口设计.md
src/: main.rs  request.rs  response.rs  server.rs  shell_actor.rs  util.rs
src/controller/: flow.rs  mod.rs  project.rs
src/entity/: fow.rs  mod.rs  project.rs  project_flow.rs
src/model/: mod.rs
